fixed menu toggling (js) on mobile and tablet

--- a/src/styles/partials/grid.scss
+++ b/src/styles/partials/grid.scss
@@ -21,9 +21,9 @@
     margin: 0 auto;
   }
 
-  &--fluid {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+  &.container--fluid {
+    padding-left: 0;
+    padding-right: 0;
   }
 
   &--fluid-xs {
